To shannon-fano

--- a/Makefile.table
+++ b/Makefile.table
@@ -1,3 +1,41 @@
 
-nb_bits_utile pow2 prend_bit pose_bit open_bitstream close_bitstream put_bit get_bit put_bits get_bits put_bit_string put_entier get_entier put_entier_signe get_entier_signe open_shannon_fano close_shannon_fano put_entier_shannon_fano get_entier_shannon_fano allocation_matrice_carree_float liberation_matrice_carree_float coef_dct dct psycho compresse decompresse lire_ligne allocation_image liberation_image lecture_image ecriture_image dct_image quantification zigzag ondelette_1d ondelette_2d ondelette_1d_inverse ondelette_2d_inverse : tests
+-n nb_bits_utile 
+-n pow2 
+-n prend_bit 
+-n pose_bit 
+-n open_bitstream 
+-n close_bitstream 
+-n put_bit 
+-n get_bit 
+-n put_bits 
+-n get_bits 
+-n put_bit_string 
+-n put_entier 
+-n get_entier 
+-n put_entier_signe 
+-n get_entier_signe 
+-n open_shannon_fano 
+-n close_shannon_fano 
+-n put_entier_shannon_fano 
+-n get_entier_shannon_fano 
+-n allocation_matrice_carree_float 
+-n liberation_matrice_carree_float 
+-n coef_dct 
+-n dct 
+-n psycho 
+-n compresse 
+-n decompresse 
+-n lire_ligne 
+-n allocation_image 
+-n liberation_image 
+-n lecture_image 
+-n ecriture_image 
+-n dct_image 
+-n quantification 
+-n zigzag 
+-n ondelette_1d 
+-n ondelette_2d 
+-n ondelette_1d_inverse 
+-n ondelette_2d_inverse 
+: tests
 	./tests $@
